--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <header>
         <div class="container">
-            <div>
+            <div class="header-img">
                 <a href="">
                     <img src="./img/crest.png" alt="logo">
                 </a>
             </div>
-            <div>
+            <div class="header-nav">
                 <nav>
                     <ul>
                         <li>
