--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- gg font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- fa -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <div class="header-img">
+        <div class="container header">
+            <div class="header-logo">
                 <a href="">
                     <img src="./img/crest.png" alt="logo">
                 </a>
@@ -47,24 +52,24 @@
                         </li>
                     </ul>
                 </nav>
-                <div>
-                    <button>
-                        <i class="fa fa-phone"></i> (+1) 555 234-8765
-                    </button>
-                    <i class="fa fa-twitter"></i>
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-youtube"></i>
-                    <i class="fa fa-instagram"></i>
-                </div>
+            </div>
+            <div class="header-link">
+                <button class="btn-header">
+                    <i class="fa fa-phone"></i> (+1) 555 234-8765
+                </button>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-youtube-play"></i>
+                <i class="fa fa-instagram"></i>
             </div>
         </div>
     </header>
-    <section class="carousel">
-        <div class="container">
+    <section class="container">
+        <div class="carousel">
             <div class="carousel-left">
                 <span> ONLY THIS WEEKEND </span>
                 <h1> <b>You Learn</b> Spanish</h1>
-                <button>
+                <button type="button" class="btn-carousel">
                     apply today
                 </button>
             </div>
@@ -73,7 +78,7 @@
             </div>
         </div>
     </section>
-    <section class="description">
+    <section class=" description ">
         <div class="container row list">
             <div class="col">
                 <div>
