--- a/index.html
+++ b/index.html
@@ -24,98 +24,71 @@
 <body>
     <header>
         <div class="container header">
-            <div class="header-logo">
-                <a href="">
-                    <img src="./img/crest.png" alt="logo">
-                </a>
-            </div>
-            <div class="header-nav">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Courses</a>
-                        </li>
-                        <li>
-                            <a href="#">Blog</a>
-                        </li>
-                        <li>
-                            <a href="#">Shop</a>
-                        </li>
-                        <li>
-                            <a href="#">Elements</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <a href="">
+                <img class="header-img" src="./img/crest.png" alt="logo">
+            </a>
+            <nav class=" header-nav">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Courses</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#">Elements</a>
+                    </li>
+                </ul>
+            </nav>
             <div class="header-link">
-                <button class="btn-header">
+                <button class=" btn-header">
                     <i class="fa fa-phone"></i> (+1) 555 234-8765
                 </button>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-youtube-play"></i>
-                <i class="fa fa-instagram"></i>
+
+                <div> <i class="fa fa-twitter "></i>
+                    <i class="fa fa-facebook icon"></i>
+                    <i class="fa fa-youtube-play icon"></i>
+                    <i class="fa fa-instagram icon"></i>
+                </div>
+
             </div>
         </div>
     </header>
-    <section class="container">
-        <div class="carousel">
+
+    <section class="carousel">
+        <div class="container carousel_item">
             <div class="carousel-left">
                 <span> ONLY THIS WEEKEND </span>
                 <h1> <b>You Learn</b> Spanish</h1>
-                <button type="button" class="btn-carousel">
+                <button class="btn-carousel">
                     apply today
                 </button>
             </div>
             <div class="carousel-right">
                 <img src="./img/wavy_girl.png" alt="...">
-            </div>
-        </div>
-    </section>
-    <section class=" description ">
-        <div class="container row list">
-            <div class="col">
-                <div>
-                    <i></i>
-                </div>
-                <div>
-                    <h6>METHODOLOGY</h6>
-                    <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
-                    <a href="#">VIEW MORE <i></i></a>
-                </div>
-            </div>
-            <div class="col">
-                <div>
-                    <i></i>
-                </div>
-                <div>
-                    <h6>LOCATION</h6>
-                    <p>Tote bag trust fund tacos organic four dollar toast kickstarter pork belly meggings fingerstache.
-                    </p>
-                    <a href="#">VIEW MORE <i></i></a>
-                </div>
-            </div>
-            <div class="col">
-                <div>
-                    <i></i>
-                </div>
-                <div>
-                    <h6>FACILITY</h6>
-                    <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
-                    <a href="#">VIEW MORE <i></i></a>
+                <div class="carousel-img">
+                    <img class="img-hello" src="./img/hello.png" alt="...">
+                    <img class="img-ciao" src="./img/ciao.png" alt="...">
+                    <img class="img-bonjour" src="./img/bonjour.png" alt="...">
+                    <img class="img-guten" src="./img/guten_tag.png" alt="">
                 </div>
             </div>
         </div>
     </section>
+
     <footer>
 
     </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -130,3 +103,37 @@
 </body>
 
 </html>
+<!-- 
+<div class="container ">
+    <div class="col-3">
+        <div>
+            <i></i>
+        </div>
+        <div>
+            <h6>METHODOLOGY</h6>
+            <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
+            <a href="#">VIEW MORE <i></i></a>
+        </div>
+    </div>
+    <div class="col-3">
+        <div>
+            <i></i>
+        </div>
+        <div>
+            <h6>LOCATION</h6>
+            <p>Tote bag trust fund tacos organic four dollar toast kickstarter pork belly meggings fingerstache.
+            </p>
+            <a href="#">VIEW MORE <i></i></a>
+        </div>
+    </div>
+    <div class="col-3">
+        <div>
+            <i></i>
+        </div>
+        <div>
+            <h6>FACILITY</h6>
+            <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
+            <a href="#">VIEW MORE <i></i></a>
+        </div>
+    </div>
+</div> -->
