--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
             </div>
         </div>
     </header>
-
     <section class="carousel">
         <div class="container carousel_item">
             <div class="carousel-left">
@@ -74,17 +73,66 @@
                 </button>
             </div>
             <div class="carousel-right">
-                <img src="./img/wavy_girl.png" alt="...">
+                <img class="img-girl" src="./img/wavy_girl.png" alt="...">
                 <div class="carousel-img">
                     <img class="img-hello" src="./img/hello.png" alt="...">
                     <img class="img-ciao" src="./img/ciao.png" alt="...">
                     <img class="img-bonjour" src="./img/bonjour.png" alt="...">
                     <img class="img-guten" src="./img/guten_tag.png" alt="">
                 </div>
+
             </div>
         </div>
     </section>
-
+    <div class="description-bg"></div>
+    <section class="description">
+        <div class="container row description-list">
+            <div class="col-4 description-item">
+                <div class="description-icon">
+                    <a href="#">
+                        <i class="fa fa-graduation-cap"></i>
+                    </a>
+                </div>
+                <div class="description-content ">
+                    <a href="#">
+                        <h6>METHODOLOGY</h6>
+                    </a>
+                    <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
+                    <a href="#">VIEW MORE <i></i></a>
+                </div>
+            </div>
+            <div class="col-4 description-item">
+                <div class="description-icon">
+                    <a href="#">
+                        <i class="fa fa-map-marker "></i>
+                    </a>
+                </div>
+                <div class="description-content">
+                    <a href="#">
+                        <h6>LOCATION</h6>
+                    </a>
+                    <p>Tote bag trust fund tacos organic four dollar toast kickstarter pork belly meggings fingerstache.
+                    </p>
+                    <a href="#">VIEW MORE <i></i></a>
+                </div>
+            </div>
+            <div class="col-4 description-item">
+                <div class="description-icon">
+                    <a href="#">
+                        <i class="fa fa-trophy"></i>
+                    </a>
+                </div>
+                <div class="description-content">
+                    <a href="#">
+                        <h6>FACILITY</h6>
+                    </a>
+                    <p>Authentic vexillologist incididunt adipisicing blog occupy williamsburg four dollar carry
+                        chillwave.</p>
+                    <a href="#">VIEW MORE <i></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
 
     </footer>
@@ -103,37 +151,3 @@
 </body>
 
 </html>
-<!-- 
-<div class="container ">
-    <div class="col-3">
-        <div>
-            <i></i>
-        </div>
-        <div>
-            <h6>METHODOLOGY</h6>
-            <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
-            <a href="#">VIEW MORE <i></i></a>
-        </div>
-    </div>
-    <div class="col-3">
-        <div>
-            <i></i>
-        </div>
-        <div>
-            <h6>LOCATION</h6>
-            <p>Tote bag trust fund tacos organic four dollar toast kickstarter pork belly meggings fingerstache.
-            </p>
-            <a href="#">VIEW MORE <i></i></a>
-        </div>
-    </div>
-    <div class="col-3">
-        <div>
-            <i></i>
-        </div>
-        <div>
-            <h6>FACILITY</h6>
-            <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
-            <a href="#">VIEW MORE <i></i></a>
-        </div>
-    </div>
-</div> -->
