--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
     <section class="card-session">
         <div class="container card-session-list">
             <div class="card  card-session-item">
-                <img src="./img/inner_image_01.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <span>COURSES</span>
-                    <h5 class="card-title">Weekend Courses
+                <img src="./img/inner_image_01.jpg" class="card-img-top card-session-img" alt="...">
+                <div class="card-body card-session-body">
+                    <span class="card-session-span">COURSES</span>
+                    <h5 class="card-title card-session-title">Weekend Courses
                     </h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text card-session-text">Photo booth actually ennui austin. Taxidermy mlkshk activated
+                        charcoal, bushwick taiyaki fashion axe copper mug</p>
+                    <a href="#" class="card-session-link">view more <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="card  card-session-item">
