--- a/index.html
+++ b/index.html
@@ -92,46 +92,46 @@
         <div class="container row description-list">
             <div class="col-4 description-item">
                 <div class="description-icon">
-                    <a href="#">
-                        <i class="fa fa-graduation-cap"></i>
+                    <a class="description-link fa fa-graduation-cap" href="#">
                     </a>
                 </div>
                 <div class="description-content ">
-                    <a href="#">
-                        <h6>METHODOLOGY</h6>
+                    <a class="description-content-a" href="#">
+                        METHODOLOGY
                     </a>
-                    <p>Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled sustainable.</p>
-                    <a href="#">VIEW MORE <i></i></a>
+                    <p class="description-text">Twee echo park celiac YOLO dreamcatcher bushwick. Pitchfork fam tousled
+                        sustainable.</p>
+                    <a class="description-content-link" href="#">VIEW MORE <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="col-4 description-item">
                 <div class="description-icon">
-                    <a href="#">
-                        <i class="fa fa-map-marker "></i>
+                    <a class="description-link fa fa-map-marker" href="#">
                     </a>
                 </div>
                 <div class="description-content">
-                    <a href="#">
-                        <h6>LOCATION</h6>
+                    <a class="description-content-a" href="#">
+                        LOCATION
                     </a>
-                    <p>Tote bag trust fund tacos organic four dollar toast kickstarter pork belly meggings fingerstache.
+                    <p class="description-text">Tote bag trust fund tacos organic four dollar toast kickstarter pork
+                        belly meggings fingerstache.
                     </p>
-                    <a href="#">VIEW MORE <i></i></a>
+                    <a class="description-content-link" href="#">VIEW MORE <i class="fa fa-arrow-right "></i></a>
                 </div>
             </div>
             <div class="col-4 description-item">
                 <div class="description-icon">
-                    <a href="#">
-                        <i class="fa fa-trophy"></i>
+                    <a class="description-link fa fa-trophy" href="#">
                     </a>
                 </div>
                 <div class="description-content">
-                    <a href="#">
-                        <h6>FACILITY</h6>
+                    <a class="description-content-a" href="#">
+                        FACILITY
                     </a>
-                    <p>Authentic vexillologist incididunt adipisicing blog occupy williamsburg four dollar carry
+                    <p class="description-text">Authentic vexillologist incididunt adipisicing blog occupy williamsburg
+                        four dollar carry
                         chillwave.</p>
-                    <a href="#">VIEW MORE <i></i></a>
+                    <a class="description-content-link" href="#">VIEW MORE <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -187,39 +187,199 @@
             <div class="card  card-session-item">
                 <img src="./img/inner_image_01.jpg" class="card-img-top card-session-img" alt="...">
                 <div class="card-body card-session-body">
+                    <div class="card-session-color"></div>
                     <span class="card-session-span">COURSES</span>
                     <h5 class="card-title card-session-title">Weekend Courses
                     </h5>
                     <p class="card-text card-session-text">Photo booth actually ennui austin. Taxidermy mlkshk activated
                         charcoal, bushwick taiyaki fashion axe copper mug</p>
-                    <a href="#" class="card-session-link">view more <i class="fa fa-arrow-right"></i></a>
+                    <a href="#" class="card-session-link">view more <i
+                            class="fa fa-arrow-right card-session-icon"></i></a>
                 </div>
             </div>
             <div class="card  card-session-item">
-                <img src="./img/inner_image_02.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <span>COURSES</span>
-                    <h5 class="card-title">Beginners Level</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <img src="./img/inner_image_02.jpg" class="card-img-top card-session-img" alt="...">
+                <div class="card-body card-session-body">
+                    <div class="card-session-color"></div>
+                    <span class="card-session-span">COURSES</span>
+                    <h5 class="card-title card-session-title">Beginners Level</h5>
+                    <p class="card-text card-session-text">Lumbersexual tumblr flannel tumeric dreamcatcher. 90's
+                        organic jean shorts, flexitarian four dollar toast selfies.</p>
+                    <a href="#" class="card-session-link">view more <i
+                            class="fa fa-arrow-right card-session-icon"></i></a>
                 </div>
             </div>
             <div class="card  card-session-item">
-                <img src="./img/inner_image_03.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <span>COURSES</span>
-                    <h5 class="card-title">Business English
+                <img src="./img/inner_image_03.jpg" class="card-img-top card-session-img" alt="...">
+                <div class="card-body card-session-body">
+                    <div class="card-session-color"></div>
+                    <span class="card-session-span">COURSES</span>
+                    <h5 class="card-title card-session-title">Business English
                     </h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text card-session-text">Affogato crucifix lomo banjo, venmo roof party williamsburg
+                        PBR&B raclette tilde lumbersexual hammock squid.</p>
+                    <a href="#" class="card-session-link">view more <i
+                            class="fa fa-arrow-right card-session-icon"></i></a>
                 </div>
             </div>
         </div>
     </section>
-    <section class="">
+    <section class="courses">
+        <div class="container courses-list">
+            <div class="courses-left">
+                <h6 class="courses-h6">BEGINNERS COURSES</h6>
+                <h1 class="courses-title">Weekend Courses
+                    50% off</h1>
+                <p class="courses-text">Elevate your vector art in the advanced digital Illustration course at Tabula.
+                    Instructor-led creative classes at your pace.</p>
+                <div class="courses-button">
+                    <button class="btn-courses">view schedule</button>
+                    <button class="btn-courses"><i class="fa fa-phone"></i>1-800-555-678</button>
+                </div>
+            </div>
+            <div class="courses-right">
+                <img class="courses-img" src="./img/home_inner_01.png" alt="...">
+            </div>
+        </div>
+    </section>
+    <section class="seo">
+        <div class="container seo-list">
+            <div class="seo-left">
+                <img src="./img/home_inner_02.png" alt="logo">
+            </div>
+            <div class="seo-right">
+                <p>LEVEL B2</p>
+                <H1> Intermediate</H1>
+                <div class="accordion seo-card-list" id="accordionExample">
+                    <div class="card seo-card-item">
+                        <div class="card-header seo-card-header" id="headingOne">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                                    data-target="#collapseOne" aria-controls="collapseOne">
+                                    <i class="fa fa-graduation-cap"></i> ENGLISH COURSES
+                                    <i class="fa fa-plus-circle"></i>
+                                    <i class="fa fa-minus-circle"></i>
+                                </button>
+                            </h2>
+                        </div>
 
+                        <div id="collapseOne" class="collapse  seo-card-bot" aria-labelledby="headingOne"
+                            data-parent="#accordionExample">
+                            <div class="card-body seo-card-body">
+                                Inspired by the book “The Crayon Box That Talked“, this lesson will show children that
+                                when we all work together, the results are much more.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card seo-card-item">
+                        <div class="card-header seo-card-header" id="headingTwo">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                    data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
+                                    <i class="fa fa-graduation-cap"></i>
+                                    SPANISH COURSES
+                                    <i class="fa fa-plus-circle"></i>
+                                    <i class="fa fa-minus-circle"></i>
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTwo" class="collapse seo-card-bot" aria-labelledby="headingTwo"
+                            data-parent="#accordionExample">
+                            <div class="card-body seo-card-body">
+                                Dui id ornare arcu odio ut sem nulla pharetra diam. Enim ut tellus elementum sagittis
+                                vitae. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Viverra nibh cras
+                                pulvinar mattis nunc sed blandit libero. Nibh tellus molestie nunc non blandit massa
+                                enim nec.
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card seo-card-item">
+                        <div class="card-header seo-card-header" id="headingThree">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                    data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree">
+                                    <i class="fa fa-graduation-cap"></i>
+                                    FRENCH COURSES
+                                    <i class="fa fa-plus-circle"></i>
+                                    <i class="fa fa-minus-circle"></i>
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseThree" class="collapse seo-card-bot" aria-labelledby="headingThree"
+                            data-parent="#accordionExample">
+                            <div class="card-body seo-card-body">
+                                Vitae turpis massa sed elementum tempus egestas sed sed risus. Posuere ac ut consequat
+                                semper viverra. Velit aliquet sagittis id consectetur purus ut tortor posuere.
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="btn-seo">view more</button>
+            </div>
+        </div>
+        <div class="seo-img">
+            <img src="./img/white_bottom_wave_01.png" alt="">
+        </div>
+    </section>
+    <section class="schedule">
+        <div class="container schedule-list">
+            <div class="card schedule-item" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+            <div class="card schedule-item" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+            <div class="card schedule-item" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
 
