landing page SASS

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                     <i class="fa fa-graduation-cap"></i> ENGLISH COURSES
                                     <div class="seo-card-icon">
                                         <i class="fa fa-plus"></i>
-                                        <i class="fa fa-minus"></i>
+                                        <!-- <i class="fa fa-minus"></i> -->
                                     </div>
                                 </button>
                             </h2>
@@ -286,7 +286,7 @@
                                     SPANISH COURSES
                                     <div class="seo-card-icon">
                                         <i class="fa fa-plus"></i>
-                                        <i class="fa fa-minus"></i>
+                                        <!-- <i class="fa fa-minus"></i> -->
                                     </div>
                                 </button>
                             </h2>
@@ -311,7 +311,7 @@
                                     FRENCH COURSES
                                     <div class="seo-card-icon">
                                         <i class="fa fa-plus"></i>
-                                        <i class="fa fa-minus"></i>
+                                        <!-- <i class="fa fa-minus"></i> -->
                                     </div>
                                 </button>
                             </h2>
